changes made for DC after code review git status git status